--- a/oloo_works_1.html
+++ b/oloo_works_1.html
@@ -105,7 +105,7 @@
                 </div>
                 <div class="pup_window_content_part project_content_part" style="margin-bottom:30px;padding-left:0px;">
                     <div class="pup_content">
-                        <div class="part_title h5 font_bold emphasize_text">行動說明</div>
+                        <div class="part_title h5 font_bold emphasize_text">說明</div>
                         <div class="pup_normal_text" style="margin-top:10px;">
                             使研究前期假設有所依據，<span class="emphasize_text">定義了研究目標的核心主題「電動滑板車」、「展演場區」</span>，<br />根據主題於部落客心得、各大社群論壇、google評價留言，以研究目標為範圍收集資訊。
                         </div>
@@ -245,7 +245,7 @@
                     <div class="pup_content">
                         <div class="pup_window_content_part project_content_part" style="margin-bottom:40px;padding-left:0px;">
                             <div class="pup_content">
-                                <div class="part_title h5 font_bold emphasize_text">前言</div>
+                                <div class="part_title h5 font_bold emphasize_text">說明</div>
                                 <div class="pup_text large_text">
                                     經桌面研究獲取資訊，成員各自<span class="emphasize_text">以「價值主張地圖」收斂提出假設</span>，延伸導出「精實畫布」使假設更加明確。
                                 </div>
@@ -292,7 +292,7 @@
                                 <div class="pup_normal_text_small">若難以邏輯推演出論述，須檢視前述圖表內容是否足夠明確。</div>
                             </div>
                         </div>
-                        <div class="pup_window_content_part project_content_part" style="margin-top:10px;margin-bottom:50px;">
+                        <div class="pup_window_content_part project_content_part" style="margin-top:10px;margin-bottom:0px;">
                             <div class="pup_content">
                                 <div class="part_title h5 font_bold emphasize_text">三、篩選假設</div>
                                 <div class="pup_normal_text">成員交互驗證各自的商業機會、風險，根據「已知、未知」和「商業價值高、低」以十字量表分類排序出<span class="emphasize_text">具「未知」和「高商業價值」</span>之機會和風險。</div>
@@ -356,7 +356,7 @@
                     <div class="pup_content">
                         <div class="pup_window_content_part project_content_part" style="margin-bottom:40px;padding-left:0px;">
                             <div class="pup_content">
-                                <div class="part_title h5 font_bold emphasize_text">前言</div>
+                                <div class="part_title h5 font_bold emphasize_text">說明</div>
                                 <div class="pup_text large_text">
                                     觀察「未知」、「高商業價值」商業機會、風險<span class="emphasize_text">依共通點分類1~3組，並篩選收斂出研究議題；</span><br />以句型「透過研究該議題，可以達成某項研究目標...」、「因研究該議題能達成某項研究預期...」輔助解釋。
                                 </div>
@@ -400,13 +400,14 @@
                             <div class="pup_content">
                                 <div class="part_title h5 font_bold emphasize_text">二、選擇假設</div>
                                 <div class="pup_normal_text" style="margin-top:20px;margin-bottom:5px;">
-                                    以<span class="font_bold emphasize_text">「逛展族群對於展區的移動行為」</span>延伸出研究議題。
+                                    選擇<span class="font_bold emphasize_text">「逛展族群對於展區的移動行為」</span>，<br />
+                                    並以<span class="font_bold emphasize_text">「展區環境性質對於電動滑板車移動方式」為輔</span>，延伸出研究議題。
                                 </div>
                                 <div class="pup_normal_text" style="margin-top:20px;margin-bottom:5px;">
                                     因展區是Oloo初步開發的市場，對於投入產品可參考資訊很少，<br />
                                     相較於研究「電動滑板車對於逛展族群的適配度」(使用感受、決策...等細節)，<br />
                                     <span class="emphasize_text">了解客群逛展情境、移動模式和需求，並探查展區環境為輔，<br />
-                                    更適配目前市場階段和驗證可行度。</span>
+                                        更適配目前市場階段和驗證可行度。</span>
                                 </div>
                             </div>
                         </div>
@@ -415,13 +416,14 @@
                                 <div class="part_title h5 font_bold emphasize_text">三、提出議題</div>
                                 <div class="pup_normal_text" style="margin-top:20px;margin-bottom:5px;">
                                     延伸研究議題：<br />
-                                    <span class="font_bold emphasize_text">「探討逛展族群因哪些因素，影響展區中短距離移動需求。」</span>
+                                    <span class="font_bold emphasize_text">「逛展族群會有哪些因素，影響展區中短距離移動需求。」</span><br />
+                                    <span class="font_bold emphasize_text">「探查展區環境對於電動滑板車的適配度。」</span>
                                 </div>
                                 <div class="pup_normal_text" style="margin-top:20px;margin-bottom:5px;">
                                     作為後續行動方向，套入目標管理框架OGSM，來理順是否合乎研究目標和目的。
                                 </div>
                                 <div class="pup_normal_text" style="margin-top:20px;margin-bottom:5px;">
-                                    透過研究「探討逛展族群因哪些因素，影響展區中短距離移動需求」，<br />
+                                    透過研究「探討逛展族群因哪些因素，影響展區中短距離移動需求」、「探查展區環境對於電動滑板車的適配度」，<br />
                                     我們能了解逛展族群的「樣貌與分群」、「在展區參觀的脈絡與行為」、「展演區會遇到的短距離交通需求與機會」，<br />
                                     <span class="emphasize_text">因為「了解客群逛展情境、移動模式和需求，並探查展區環境為輔，適配目前市場階段和驗證可行度。」</span><br />
                                     對我們「確認展演場區的市場機會和開發潛力，作為商業策略投入產品的參考。」、「獲得目標客群短距離移動的需求情境。」的最終目的有所幫助。
