--- a/oloo_works_1.html
+++ b/oloo_works_1.html
@@ -85,7 +85,7 @@
         <div class="pup_window_content_tab_container">
             <div class="pup_window_content_tab pup_tab_btn h5 font_bold oloo_pup_tab_1"><a href="#oloo_tab_1" class="set_middle"><span>桌面研究</span></a></div>
             <div class="pup_window_content_tab pup_tab_btn h5 font_bold oloo_pup_tab_2"><a href="#oloo_tab_2" class="set_middle"><span>形成假設</span></a></div>
-            <div class="pup_window_content_tab pup_tab_btn h5 font_bold oloo_pup_tab_2"><a href="#oloo_tab_3" class="set_middle"><span>制定議題</span></a></div>
+            <div class="pup_window_content_tab pup_tab_btn h5 font_bold oloo_pup_tab_3"><a href="#oloo_tab_3" class="set_middle"><span>制定議題</span></a></div>
         </div>
         <div class="pup_window_tab_content_container">
             <div id="oloo_tab_1" class="pup_window_tab_content">
@@ -113,7 +113,7 @@
                 </div>
                 <div class="pup_window_content_part project_content_part" style="margin-top:10px;margin-bottom:50px;">
                     <div class="pup_content">
-                        <div class="part_title h5 font_bold emphasize_text">一、電動滑板車</div>
+                        <div class="part_title h5 font_bold emphasize_text">桌面研究(一)&nbsp;電動滑板車</div>
                         <div class="pup_normal_text">以部分代表性資訊為例</div>
                         <div class="pup_content_pic" style="margin-top:20px;">
                             <div class="pup_normal_text font_bold emphasize_text">1.客群樣貌和分群</div>
@@ -129,7 +129,7 @@
                             <picture>
                                 <img src="images/oloo_pic_1-3.png" style="max-width:100%">
                             </picture>
-                            <div class="pup_normal_text font_bold emphasize_text" style="margin-top:30px;">2.騎乘行為和脈絡</div>
+                            <div class="pup_normal_text font_bold emphasize_text" style="margin-top:40px;">2.騎乘行為和脈絡</div>
                             <div class="pup_normal_text_small font_bold emphasize_text" style="margin-top:10px;">娛樂</div>
                             <picture>
                                 <img src="images/oloo_pic_1-4.png" style="max-width:100%">
@@ -142,7 +142,7 @@
                             <picture>
                                 <img src="images/oloo_pic_1-6.png" style="max-width:100%">
                             </picture>
-                            <div class="pup_normal_text font_bold emphasize_text" style="margin-top:30px;">3.交通需求和機會</div>
+                            <div class="pup_normal_text font_bold emphasize_text" style="margin-top:40px;">3.交通需求和機會</div>
                             <div class="pup_normal_text_small font_bold emphasize_text" style="margin-top:10px;">機會-節省時間</div>
                             <picture>
                                 <img src="images/oloo_pic_1-7.png" style="max-width:100%">
@@ -176,7 +176,7 @@
                 </div>
                 <div class="pup_window_content_part project_content_part" style="margin-top:0px;margin-bottom:0px;">
                     <div class="pup_content">
-                        <div class="part_title h5 font_bold emphasize_text">二、展演場區</div>
+                        <div class="part_title h5 font_bold emphasize_text">桌面研究(二)&nbsp;展演場區</div>
                         <div class="pup_normal_text">以部分代表性資訊為例</div>
                         <div class="pup_content_pic" style="margin-top:20px;">
                             <div class="pup_normal_text font_bold emphasize_text">1.客群樣貌和分群</div>
@@ -189,7 +189,7 @@
                                 <img src="images/oloo_pic_1-13.png" style="max-width:100%">
                             </picture>
 
-                            <div class="pup_normal_text font_bold emphasize_text" style="margin-top:30px;">2.逛展行為和脈絡</div>
+                            <div class="pup_normal_text font_bold emphasize_text" style="margin-top:40px;">2.逛展行為和脈絡</div>
                             <div class="pup_normal_text_small font_bold emphasize_text" style="margin-top:10px;">餐飲</div>
                             <picture>
                                 <img src="images/oloo_pic_1-15.png" style="max-width:100%">
@@ -371,22 +371,22 @@
                                         <img src="images/oloo_pic_2-11.png" style="max-width:100%">
                                     </picture>
                                 </div>
-                                <div class="pup_normal_text" style="margin-top:20px;margin-bottom:5px;">依共通點分類1~3組</div>
-                                <div class="pup_normal_text font_bold emphasize_text" style="margin-top:20px;margin-bottom:5px;">1.逛展族群對於展區的移動行為</div>
+                                <div class="pup_normal_text" style="margin-top:50px;margin-bottom:5px;">依共通點分類1~3組</div>
+                                <div class="pup_normal_text font_bold emphasize_text" style="margin-top:30px;margin-bottom:5px;">1.逛展族群對於展區中移動行為</div>
                                 <div class="pup_content_pic">
                                     <picture>
                                         <source media="(max-width:540px)" srcset="images/oloo_pic_2-12-540.png" />
                                         <img src="images/oloo_pic_2-12.png" style="max-width:100%">
                                     </picture>
                                 </div>
-                                <div class="pup_normal_text font_bold emphasize_text" style="margin-top:20px;margin-bottom:5px;">2.展區環境性質對於電動滑板車移動方式</div>
+                                <div class="pup_normal_text font_bold emphasize_text" style="margin-top:40px;margin-bottom:5px;">2.展區環境對於電動滑板車移動特性</div>
                                 <div class="pup_content_pic">
                                     <picture>
                                         <source media="(max-width:540px)" srcset="images/oloo_pic_2-13-540.png" />
                                         <img src="images/oloo_pic_2-13.png" style="max-width:100%">
                                     </picture>
                                 </div>
-                                <div class="pup_normal_text font_bold emphasize_text" style="margin-top:20px;margin-bottom:5px;">3.電動滑板車的特性對於逛展族群的適配度</div>
+                                <div class="pup_normal_text font_bold emphasize_text" style="margin-top:40px;margin-bottom:5px;">3.電動滑板車使用特性對於逛展族群</div>
                                 <div class="pup_content_pic">
                                     <picture>
                                         <source media="(max-width:540px)" srcset="images/oloo_pic_2-14-540.png" />
@@ -400,14 +400,13 @@
                             <div class="pup_content">
                                 <div class="part_title h5 font_bold emphasize_text">二、選擇假設</div>
                                 <div class="pup_normal_text" style="margin-top:20px;margin-bottom:5px;">
-                                    選擇<span class="font_bold emphasize_text">「逛展族群對於展區的移動行為」</span>，<br />
-                                    並以<span class="font_bold emphasize_text">「展區環境性質對於電動滑板車移動方式」為輔</span>，延伸出研究議題。
+                                    選擇<span class="font_bold emphasize_text">「逛展族群對於展區中移動行為」</span>，<br />
+                                    並以<span class="font_bold emphasize_text">「展區環境對於電動滑板車移動特性」為輔</span>，延伸出研究議題。
                                 </div>
                                 <div class="pup_normal_text" style="margin-top:20px;margin-bottom:5px;">
                                     因展區是Oloo初步開發的市場，對於投入產品可參考資訊很少，<br />
-                                    相較於研究「電動滑板車對於逛展族群的適配度」(使用感受、決策...等細節)，<br />
-                                    <span class="emphasize_text">了解客群逛展情境、移動模式和需求，並探查展區環境為輔，<br />
-                                        更適配目前市場階段和驗證可行度。</span>
+                                    相較於研究「電動滑板車使用特性對於逛展族群」(使用感受、決策...等細節)，<br />
+                                    <span class="emphasize_text">了解客群逛展情境、移動模式和需求，並探查展區環境為輔，<br />更適配目前oloo對於展區的市場階段和驗證可行度。</span>
                                 </div>
                             </div>
                         </div>
