--- a/oloo_works_2.html
+++ b/oloo_works_2.html
@@ -85,7 +85,7 @@
         <div class="pup_window_content_tab_container">
             <div class="pup_window_content_tab pup_tab_btn h5 font_bold oloo_pup_tab_1"><a href="#oloo_tab_1" class="set_middle"><span>拆解議題</span></a></div>
             <div class="pup_window_content_tab pup_tab_btn h5 font_bold oloo_pup_tab_2"><a href="#oloo_tab_2" class="set_middle"><span>訪談準備</span></a></div>
-            <div class="pup_window_content_tab pup_tab_btn h5 font_bold oloo_pup_tab_2"><a href="#oloo_tab_3" class="set_middle"><span>訪談行動</span></a></div>
+            <div class="pup_window_content_tab pup_tab_btn h5 font_bold oloo_pup_tab_3"><a href="#oloo_tab_3" class="set_middle"><span>訪談行動</span></a></div>
         </div>
         <div class="pup_window_tab_content_container">
             <div id="oloo_tab_1" class="pup_window_tab_content">
@@ -93,7 +93,7 @@
                     <div class="pup_content">
                         <div class="part_title h5 font_bold emphasize_text">說明</div>
                         <div class="pup_normal_text" style="margin-bottom:5px;">
-                            將議題列出各種面向，將面向拆出次要面向，定義次要面向的指標。
+                            <span class="emphasize_text">將研究議題列出各種面向</span>，將面向拆出次要面向，定義次要面向的指標。
                         </div>
                     </div>
                 </div>
@@ -141,7 +141,7 @@
                     <div class="pup_content">
                         <div class="part_title h5 font_bold emphasize_text">招募受訪者：招募條件</div>
                         <div class="pup_normal_text" style="margin-top:10px;">
-                            根據<span class="emphasize_text">議題拆解的重要面向</span>設定招募條件。
+                            定義<span class="emphasize_text">議題的重要面向</span>設定招募條件。
                         </div>
                         <div class="text_row" style="margin-top:20px;">
                             <div class="text_item">
@@ -172,7 +172,7 @@
                     <div class="pup_content" style="margin-top:30px;">
                         <div class="part_title h5 font_bold emphasize_text">招募受訪者：招募問卷</div>
                         <div class="pup_normal_text" style="margin-top:10px;">
-                            根據<span class="emphasize_text">議題拆解的重要面向</span>制定招募問卷內容，問題從概念方向→明確具篩選性→開放式了解細節為設計原則。
+                            定義<span class="emphasize_text">議題的重要面向</span>制定招募問卷內容，問題從概念方向→明確具篩選性→開放式了解細節為設計原則。
                         </div>
                         <div class="pup_normal_text_small" style="margin-top:10px;margin-bottom:5px;">以部分內容為例</div>
                         <div class="pup_content_pic">
@@ -184,7 +184,7 @@
                 </div>
                 <div class="pup_window_content_part project_content_part" style="margin-top:10px;margin-bottom:50px;">
                     <div class="pup_content">
-                        <div class="part_title h5 font_bold emphasize_text">規劃訪綱</div>
+                        <div class="part_title h5 font_bold emphasize_text">規劃訪談大綱</div>
                         <div class="pup_normal_text_small" style="margin-top:10px;margin-bottom:5px;">以部分內容為例&nbsp;(個人負責編寫)</div>
                         <div class="pup_content_pic">
                             <picture>
