--- a/sino_works_5.html
+++ b/sino_works_5.html
@@ -213,7 +213,7 @@
                             <div class="pup_content">
                                 <div class="part_title h5 font_bold emphasize_text">前言</div>
                                 <div class="pup_text large_text">
-                                    <span class="emphasize_text">使用CSS&nbsp;animation和Jquery</span>完成網頁動效展示。
+                                    <span class="emphasize_text">使用CSS&nbsp;animation和Jquery</span>完成網頁動效展示，<span class="emphasize_text">較複雜動效可使用Adobe&nbsp;animate</span>進行示意圖製作。
                                 </div>
                                 <div class="pup_normal_text">
                                     <a href="website/sinopac_web/index.html" target="_blank" class="pup_window_btn">前往網路投保首頁(切版範例)</a>
@@ -284,7 +284,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="pup_window_content_part project_content_part" style="margin-bottom:0px;padding-left:0px;">
+                        <div class="pup_window_content_part project_content_part" style="margin-bottom:50px;padding-left:0px;">
                             <div class="pup_content">
                                 <div class="part_title h5 font_bold emphasize_text">四、可點擊介面物件，鼠標懸停(hover)提示</div>
                                 <div class="pup_content_text" style="margin-top:0px;padding-left:0px;">
@@ -301,6 +301,25 @@
                                             <div style="margin-top:20px;">
                                                 <picture>
                                                     <img src="images/sino_pic_15-11.png" class="sino_pic_6">
+                                                </picture>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="pup_window_content_part project_content_part" style="margin-bottom:0px;padding-left:0px;">
+                            <div class="pup_content">
+                                <div class="part_title h5 font_bold emphasize_text">五、Adobe&nbsp;animate製作UI動效</div>
+                                <div class="pup_content_text" style="margin-top:0px;padding-left:0px;">
+                                    <div class="text_row">
+                                        <div class="text_item">
+                                            <div class="pup_normal_text_small" style="margin-top:10px;margin-bottom:5px;">
+                                                示意圖範例(非網路投保網站用)
+                                            </div>
+                                            <div>
+                                                <picture>
+                                                    <img src="images/sino_pic_15-12.gif" style="max-width:100%;">
                                                 </picture>
                                             </div>
                                         </div>
