--- a/uiux_index.html
+++ b/uiux_index.html
@@ -1589,7 +1589,7 @@
                         </div>
 
                         <div id="p13_title-3" class="work_info_text" style="margin-bottom:30px;">
-                            <span class="work_info_text_p font_bold">研究成果</span>
+                            <span class="work_info_text_p font_bold">研究呈現</span>
                             <ul style="list-style: decimal;padding-left:5px;">
                                 <li style="margin-top:10px;">
                                     <span class="font_bold">清洗訪談資料：</span><br />
@@ -1614,12 +1614,12 @@
                                     <img src="images/pup_link_dot.png" class="pup_link_dot"><span><a href="oloo_works_3.html">實作內容</a></span>
                                 </div>
                                 <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
-                                    <img src="images/pup_link_dot.png" class="pup_link_dot"><span><a href="https://drive.google.com/file/d/1j_4-eB7PA6byz0AXoQirV0H5_B0rabhz/view?usp=drive_link" target="_blank">簡報內容(可公開部分)</a></span>
+                                    <img src="images/pup_link_dot.png" class="pup_link_dot"><span><a href="https://drive.google.com/file/d/1j_4-eB7PA6byz0AXoQirV0H5_B0rabhz/view?usp=drive_link" target="_blank">簡報內容.pdf&nbsp;(可公開部分)</a></span>
                                 </div>
                             </div>
                             <div class="pup_link_area" style="margin-top:10px;">
                                 <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
-                                    <img src="images/pup_link_dot.png" class="pup_link_dot"><span class="prepare_works_btn">專案個人亮點</span>
+                                    <img src="images/pup_link_dot.png" class="pup_link_dot"><span><a href="oloo_works_4.html">專案個人亮點</a></span>
                                 </div>
                             </div>
                         </div>
