--- a/oloo_works_4.html
+++ b/oloo_works_4.html
@@ -184,6 +184,23 @@
 
                 <div class="pup_window_content_part project_content_part" style="margin-top:10px;margin-bottom:50px;">
                     <div class="pup_content">
+                        <div class="part_title h5 font_bold emphasize_text">專案負責人評價</div>
+                        <div class="pup_normal_text_small" style="margin-top:10px;margin-bottom:5px;">
+                            專案負責人為企業UX顧問，同時於實踐大學任教UX相關課程。
+                        </div>
+                        <div class="pup_content_pic">
+                            <picture>
+                                <source media="(max-width:430px)" srcset="images/info_attribute_tell_img_3_420.jpg" />
+                                <source media="(max-width:768px)" srcset="images/info_attribute_tell_img_3_768.jpg" />
+                                <source media="(max-width:960px)" srcset="images/info_attribute_tell_img_3_960.jpg" />
+                                <img src="images/info_attribute_tell_img_3.jpg" alt="產品開發-UX研究專案 專案負責人對於我論述洞見的回饋">
+                            </picture>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="pup_window_content_part project_content_part" style="margin-top:10px;margin-bottom:50px;">
+                    <div class="pup_content">
                         <div class="part_title h5 font_bold emphasize_text">制定議題</div>
                         <div class="pup_normal_text" style="margin-top:10px;">
                             <span class="emphasize_text">能論述議題的制定原因，此次根據產品市場階段和現有研究資源給予說明。</span>
@@ -201,8 +218,6 @@
                             相較於研究「電動滑板車使用特性對於逛展族群」(使用感受、決策...等細節)，<br />
                             <span class="emphasize_text">了解客群逛展情境、移動模式和需求，並探查展區環境為輔，<br />更適配目前oloo對於展區的市場階段和驗證可行度。</span>
                         </div>
-
-
                     </div>
                 </div>
 
@@ -248,7 +263,6 @@
                         </script>
                     </div>
                 </div>
-
             </div>
             <div id="oloo_tab_3" class="pup_window_tab_content">
                 <div class="pup_window_content_part project_content_part" style="margin-top:10px;margin-bottom:50px;">
@@ -284,7 +298,6 @@
                 </div>
             </div>
         </div>
-
     </div>
 </body>
 <script type="text/javascript">
